WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155903
[JSC] fix divide-by-zero in String.prototype.padStart/padEnd
https://bugs.webkit.org/show_bug.cgi?id=155903
Summary
[JSC] fix divide-by-zero in String.prototype.padStart/padEnd
Caitlin Potter (:caitp)
Reported
2016-03-25 14:48:34 PDT
[JSC] fix divide-by-zero in String.prototype.padStart/padEnd
Attachments
Patch
(2.65 KB, patch)
2016-03-25 14:49 PDT
,
Caitlin Potter (:caitp)
no flags
Details
Formatted Diff
Diff
Patch
(1.56 KB, patch)
2016-03-25 15:05 PDT
,
Caitlin Potter (:caitp)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Caitlin Potter (:caitp)
Comment 1
2016-03-25 14:49:15 PDT
Created
attachment 274941
[details]
Patch
Filip Pizlo
Comment 2
2016-03-25 14:50:54 PDT
Comment on
attachment 274941
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=274941&action=review
> Source/JavaScriptCore/tests/es6.yaml:-580 > -- path: es6/String.prototype_methods_String.prototype.padEnd.js > - cmd: runES6 :normal > -- path: es6/String.prototype_methods_String.prototype.padStart.js > - cmd: runES6 :normal
Why is this moved?
Caitlin Potter (:caitp)
Comment 3
2016-03-25 14:52:43 PDT
Comment on
attachment 274941
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=274941&action=review
>> Source/JavaScriptCore/tests/es6.yaml:-580 >> - cmd: runES6 :normal > > Why is this moved?
Wanted to move this down to be near TODO regarding tests for future ES spec revisions
Filip Pizlo
Comment 4
2016-03-25 15:02:51 PDT
(In reply to
comment #3
)
> Comment on
attachment 274941
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=274941&action=review
> > >> Source/JavaScriptCore/tests/es6.yaml:-580 > >> - cmd: runES6 :normal > > > > Why is this moved? > > Wanted to move this down to be near TODO regarding tests for future ES spec > revisions
Can you move this back? This is meant to be a quick fix to make tests pass, so we shouldn't be making unrelated changes in this same patch.
Caitlin Potter (:caitp)
Comment 5
2016-03-25 15:05:18 PDT
Created
attachment 274944
[details]
Patch
WebKit Commit Bot
Comment 6
2016-03-25 16:04:03 PDT
Comment on
attachment 274944
[details]
Patch Clearing flags on attachment: 274944 Committed
r198695
: <
http://trac.webkit.org/changeset/198695
>
WebKit Commit Bot
Comment 7
2016-03-25 16:04:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug