[JSC] fix divide-by-zero in String.prototype.padStart/padEnd https://bugs.webkit.org/show_bug.cgi?id=155903

Patch by Caitlin Potter <caitp@igalia.com> on 2016-03-25
Reviewed by Filip Pizlo.

* runtime/StringPrototype.cpp:
(JSC::padString):

Canonical link: https://commits.webkit.org/174002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198695 268f45cc-cd09-0410-ab3c-d52691b4dbfc